Fixed main.html and main/views.py (now showing name, npm, class)

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,18 @@
-<h1>Stocko (Stock Toko 🤯😱) Main Page</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<h3>Nama Produk: {{name}}</h3>
-<h3>Jumlah: {{amount}}</h3>
-<h3>Deskripsi: {{description}}</h3>
+<head>
+    <meta charset="UTF-8">
+    <title>Stocko - Tugas PBP</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5164/5164023.png" type="image/x-icon">
+</head>
+
+<body style="background-color: #333; color: white;">
+    <h1>Stocko - Kelola Stock Toko</h1>
+    <hr>
+    <h3>Nama: {{nama}}</h3>
+    <h3>NPM: {{npm}}</h3>
+    <h3>Kelas: {{kelas}}</h3>
+</body>
+
+</html> 
