--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -6,14 +6,11 @@
     <h5>Name:</h5>
     <p>{{nama}}</p>
 
-    <h5>NPM:</h5>
-    <p>{{npm}}</p>
-
     <h5>Kelas:</h5>
     <p>{{kelas}}</p>
     <table>
         <tr>
-            <th colspan="4">Anda menyimpan {{products.count}} produk pada aplikasi ini</th>
+            <th colspan="7">Anda menyimpan {{products.count}} produk pada aplikasi ini</th>
         </tr>
         <tr>
             <th>Name</th>
@@ -30,15 +27,44 @@
                 <td>{{product.amount}}</td>
                 <td>{{product.price}}</td>
                 <td>{{product.description}}</td>
+                <td>
+                    <a href="{% url 'main:add_amount' id=product.id %}">
+                        <button>
+                            Add
+                        </button>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'main:subtract_amount' id=product.id %}">
+                        <button>
+                            Subtract
+                        </button>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'main:delete_product' id=product.id %}">
+                        <button>
+                            Delete
+                        </button>
+                    </a>
+                </td>
             </tr>
         {% endfor %}
     </table>
     
     <br />
+
+    <h5>Sesi terakhir login: {{ last_login }}</h5>
     
     <a href="{% url 'main:create_product' %}">
         <button>
             Add New Product
+        </button>
+    </a>
+
+    <a href="{% url 'main:logout' %}">
+        <button>
+            Logout
         </button>
     </a>
 {% endblock content %}
