--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,19 +1,63 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-<h1>Add New Product</h1>
 
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Add Product"/>
-            </td>
-        </tr>
-    </table>
-</form>
+<header>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid d-flex justify-content-center text-white text-center">
+            <h5>{{nama}} <br><br> {{kelas}}</h5>
+        </div>
+    </nav>
+    <nav class="navbar navbar-expand-xl navbar-dark">
+        
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'main:show_main' %}">
+            <img src="https://cdn-icons-png.flaticon.com/512/5164/5164023.png" width="30" height="30" alt=""> Stocko
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="{% url 'main:create_product' %}">Add New Product</a>
+            </div>
+            <div class="text-white">
+                <a href="{% url 'main:logout' %}">
+                    <button type="button" class="btn btn-danger">Logout</button>
+                </a>
+            </div>
+          </div>
+        </div>
+      </nav>
+</header>
+<div class="container-fluid text-white">
+<h1>Add New Product</h1>
+    <form method="POST" class="col-md-3">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="name">Name: </label>
+            <input type="text" name="name" class="form-control" required id="id_name" placeholder="Name">
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="amount">Amount: </label>
+            <input type="number" name="amount"  class="form-control" required id="id_amount" placeholder="1">
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="price">Price: </label>
+            <input type="number" name="price"  class="form-control" required id="id_price" placeholder="1">
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="description">Description: </label>
+            <textarea name="description" class="form-control" cols="40" rows="10" required id="id_description"></textarea>
+        </div>
+        <br>
+        <div class="container">
+            <button type="submit" class="btn btn-primary">Add Product</button>
+        </div> 
+    </form>
+</div>
 
 {% endblock %}
