--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -6,39 +6,41 @@
 
 {% block content %}
 
-<div class = "login">
+<div class="container-fluid p-2 h-100 d-flex flex-column align-items-center bg-dark text-white">
 
-    <h1>Login</h1>
+    <div class = "login p-2 d-flex flex-column align-items-center">
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
+        <h1>Login</h1>
+        <br>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="id_username">Username</label>
+                <input type="text" name="username" class="form-control" placeholder="Username">
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="id_password">Password</label>
+                <input type="password" name="password" class="form-control" placeholder="Password">
+            </div>
+            <br>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+        </form>
 
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
-
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}     
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}     
         
-    Don't have an account yet? <a href="{% url 'main:register' %}">Register Now</a>
+        <br>
+        Don't have an account yet? <a href="{% url 'main:register' %}">Register Now</a>
+
+    </div>
 
 </div>
 
