--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,14 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Stocko</h1>
+<header>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid d-flex justify-content-center text-white text-center">
+            <h5>{{nama}} <br><br> {{kelas}}</h5>
+        </div>
+    </nav>
+    <nav class="navbar navbar-expand-xl navbar-dark">
+        
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'main:show_main' %}">
+            <img src="https://cdn-icons-png.flaticon.com/512/5164/5164023.png" width="30" height="30" alt=""> Stocko
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="{% url 'main:create_product' %}">Add New Product</a>
+            </div>
+            <div class="text-white">
+                <a href="{% url 'main:logout' %}">
+                    <button type="button" class="btn btn-danger">Logout</button>
+                </a>
+            </div>
+            </div>
+        </div>
+        </nav>
+</header>
 
-    <h5>Name:</h5>
-    <p>{{nama}}</p>
-
-    <h5>Kelas:</h5>
-    <p>{{kelas}}</p>
-    <table>
+<div class="container-fluid bg-dark text-white p-2">
+    <table class="table table-striped table-dark table-bordered">
+        <thead class="thead-dark">
         <tr>
             <th colspan="7">Anda menyimpan {{products.count}} produk pada aplikasi ini</th>
         </tr>
@@ -18,8 +42,7 @@
             <th>Price</th>
             <th>Description</th>
         </tr>
-    
-        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
+          </thead>
     
         {% for product in products %}
             <tr>
@@ -29,21 +52,21 @@
                 <td>{{product.description}}</td>
                 <td>
                     <a href="{% url 'main:add_amount' id=product.id %}">
-                        <button>
+                        <button class="btn btn-primary">
                             Add
                         </button>
                     </a>
                 </td>
                 <td>
                     <a href="{% url 'main:subtract_amount' id=product.id %}">
-                        <button>
+                        <button class="btn btn-primary">
                             Subtract
                         </button>
                     </a>
                 </td>
                 <td>
                     <a href="{% url 'main:delete_product' id=product.id %}">
-                        <button>
+                        <button class="btn btn-danger">
                             Delete
                         </button>
                     </a>
@@ -55,16 +78,6 @@
     <br />
 
     <h5>Sesi terakhir login: {{ last_login }}</h5>
-    
-    <a href="{% url 'main:create_product' %}">
-        <button>
-            Add New Product
-        </button>
-    </a>
 
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
+</div>
 {% endblock content %}
