--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -6,29 +6,55 @@
 
 {% block content %}  
 
-<div class = "login">
-    
-    <h1>Register</h1>  
+<div class="container-fluid p-2 h-100 d-flex flex-column align-items-center bg-dark text-white">
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
+    <div class = "login p-2 d-flex flex-column align-items-center">
+        
+        <h1>Register</h1>  
 
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
+            <form method="POST" >  
+                {% csrf_token %}    
+                <div class="form-group">
+                    <label for="id_username">Username*</label>
+                    <input type="text" name="username" class="form-control" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username">
+                    Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.
+                </div>
+                <br>
+                <div class="form-group">
+                    <label for="id_password1">Password*</label>
+                    <input type="password" name="password1" class="form-control" autocomplete="new-password" required id="id_password1">
+                    <ul>
+                        <li>Your password can’t be too similar to your other personal information.</li>
+                        <li>Your password must contain at least 8 characters.</li>
+                        <li>Your password can’t be a commonly used password.</li>
+                        <li>Your password can’t be entirely numeric.</li>
+                    </ul>
+                </div>
+                <br>
+                <div class="form-group">
+                    <label for="id_password2">Password Confirmation*</label>
+                    <input type="password" name="password2" class="form-control" autocomplete="new-password" required id="id_password2">
+                    Enter the same password as before, for verification.
+                </div>
+                <br>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </div> 
+            </form>
+
+            <br>
+            Already have an account? <a href="{% url 'main:login' %}">Login</a>
+
+        {% if messages %}  
+            <ul>   
+                {% for message in messages %}  
+                    <li>{{ message }}</li>  
                 {% endfor %}  
-        </ul>   
-    {% endif %}
+            </ul>   
+        {% endif %}
 
-</div>  
+    </div>  
+
+</div>
 
 {% endblock content %}
