--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -6,11 +6,11 @@
 
 {% block content %}
 
-<div class="container-fluid h-100 p-2 d-flex flex-column justify-content-center bg-dark text-white">
+<div class="container-fluid vh-100 vw-100 p-2 d-flex flex-column justify-content-center align-items-center bg-dark text-white">
 
-    <div class = "login p-2 d-flex flex-column align-items-center">
+    <div class = "login p-2 d-flex flex-column justify-content-center align-items-center rounded shadow">
 
-        <h1>Login</h1>
+        <h1 class="text-center">Login</h1>
         <br>
         <form method="POST">
             {% csrf_token %}
@@ -38,10 +38,16 @@
         {% endif %}     
         
         <br>
-        Don't have an account yet? <a href="{% url 'main:register' %}">Register Now</a>
+        <p class="text-center">Don't have an account yet? <br> <a href="{% url 'main:register' %}">Register Now</a></p>
 
     </div>
 
 </div>
+
+<style>
+    .login{
+        width: 300px;
+    }
+</style>
 
 {% endblock content %}
