--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,46 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
   </head>
 
-    <body style="background-color:rgb(23, 27, 27); height: 100vh;">
+    <body style="background-color:#1e1e1e; height:100vh;">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark rounded mb-2" style="background-color:#252525;">
+                <a class="navbar-brand m-2" href="{% url 'main:show_main' %}">
+                    <img src="https://cdn-icons-png.flaticon.com/512/5164/5164023.png" width="30" height="30" alt=""> Stocko
+                </a>
+                <button class="navbar-toggler m-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    {% if user.is_authenticated %}
+                    <div class="container-fluid navbar-nav d-none d-lg-flex justify-content-end">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item dropdown text-white">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                {{nama}} - {{kelas}}
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu" aria-labelledby="navbarDropdown" style="background-color:#252525;">
+                                    <li><a class="nav-link m-2" aria-current="page" href="{% url 'main:create_product' %}">Add New Product</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="nav-link active bg-danger m-2 text-center rounded" aria-current="page" href="{% url 'main:logout' %}">Logout</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="container-fluid navbar-nav d-flex d-lg-none">
+                        <ul class="navbar-nav text-white d-flex align-items-end">
+                            <li><div class="nav-link active rounded">{{nama}} - {{kelas}}</div></li>
+                            <li><div class="nav-link active rounded" aria-current="page" href="{% url 'main:create_product' %}">Add New Product</div></li>
+                            <li>
+                                <a class="nav-link active rounded" href="{% url 'main:logout' %}" aria-current="page">
+                                    <button type="button" class="btn btn-danger">Logout</button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    {% endif %}
+                </div>
+            </nav>
+        </header>
         {% block content %}
         {% endblock content %}
     </body>
