Fixed Background Color, button color, added shadows and borders

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -16,7 +16,7 @@
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content bg-dark">
+            <div class="modal-content rounded shadow border border-dark" style="background-color:#1e1e1e">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Add New Product</h1>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -43,8 +43,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="button_add_product" data-bs-dismiss="modal">Add Product</button>
+                    <button type="button" class="btn btn-secondary shadow rounded" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn text-white shadow rounded" id="button_add_product" data-bs-dismiss="modal" style="background-color: #0065a9;">Add Product</button>
                 </div>
             </div>
         </div>
