--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -6,9 +6,9 @@
 
 {% block content %}  
 
-<div class="container-fluid p-2 d-flex flex-column justify-content-center align-items-center bg-dark text-white">
+<div class="container-fluid p-2 d-flex flex-column justify-content-center align-items-center text-white">
 
-    <div class = "register m-5 h-75 d-flex flex-column justify-content-center align-items-center shadow rounded">
+    <div class = "register m-5 h-75 d-flex flex-column justify-content-center align-items-center shadow rounded border border-dark">
         
         <h1>Register</h1>  
 
@@ -38,7 +38,7 @@
                 </div>
                 <br>
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary">Register</button>
+                    <button type="submit" class="btn text-white" style="background-color: #0065a9;">Register</button>
                 </div>
             </form>
 
