--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-<div class="container-fluid vh-100 vw-100 p-2 d-flex flex-column justify-content-center align-items-center bg-dark text-white">
+<div class="container-fluid vh-100 vw-100 p-2 d-flex flex-column justify-content-center align-items-center text-white">
 
-    <div class = "login p-2 d-flex flex-column justify-content-center align-items-center rounded shadow">
+    <div class = "login p-2 d-flex flex-column justify-content-center align-items-center rounded shadow border border-dark">
 
         <h1 class="text-center">Login</h1>
         <br>
@@ -25,7 +25,7 @@
             </div>
             <br>
             <div class="text-center">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn text-white" style="background-color: #0065a9;">Login</button>
             </div>
         </form>
 
