--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -8,45 +8,53 @@
 
 <div class="container-fluid vh-100 vw-100 p-2 d-flex flex-column justify-content-center align-items-center text-white">
 
-    <div class = "login p-2 d-flex flex-column justify-content-center align-items-center rounded shadow border border-dark">
+    <div class = "login container p-2 d-flex flex-column justify-content-center align-items-center rounded shadow border border-dark" style="background-color:#252525;">
 
         <h1 class="text-center">Login</h1>
         <br>
         <form method="POST">
             {% csrf_token %}
-            <div class="form-group">
+            <div class="form-group mx-3">
                 <label for="id_username">Username</label>
                 <input type="text" name="username" class="form-control" placeholder="Username">
             </div>
             <br>
-            <div class="form-group">
+            <div class="form-group mx-3">
                 <label for="id_password">Password</label>
                 <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
             <br>
+            {% if messages %}
+                    <p class="mx-3">
+                        {% for message in messages %}
+                            {{ message }}
+                        {% endfor %}
+                    </p>
+            {% endif %} 
+            <br>
             <div class="text-center">
                 <button type="submit" class="btn text-white" style="background-color: #0065a9;">Login</button>
             </div>
-        </form>
-
-        {% if messages %}
-            <ul>
-                {% for message in messages %}
-                    <li>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}     
+        </form>    
         
         <br>
         <p class="text-center">Don't have an account yet? <br> <a href="{% url 'main:register' %}">Register Now</a></p>
-
     </div>
-
 </div>
 
 <style>
     .login{
-        width: 300px;
+        width: 25%;
+    }
+    @media (max-width: 900px) {
+            .login {
+                width: 50%;
+            }
+        }
+    @media (max-width: 500px) {
+        .login {
+            width: 75%;
+        }
     }
 </style>
 
