--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,13 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark rounded mb-2" style="background-color:#252525;">
                 <a class="navbar-brand m-2" href="{% url 'main:show_main' %}">
-                    <img src="https://cdn-icons-png.flaticon.com/512/5164/5164023.png" width="30" height="30" alt=""> Stocko
+                    <img src="https://cdn-icons-png.flaticon.com/512/5164/5164023.png" loading="lazy" width="30" height="30" alt=""> Stocko
                 </a>
+                {% if user.is_authenticated %}
                 <button class="navbar-toggler m-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    {% if user.is_authenticated %}
                     <div class="container-fluid navbar-nav d-none d-lg-flex justify-content-end">
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item dropdown text-white">
